[tool.poetry]
name = "optneal"
version = "0.1.0"
description = ""
authors = ["mullzhang <mullzhang@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
dwave-ocean-sdk = "^4.3.0"
openjij = "^0.4.5"
networkx = "^2.6.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
